<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorSecondary"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"
        android:inputType="textCapWords"
        android:autofillHints="name"
        style="@style/EditTextStyle"/>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:inputType="number"
        android:autofillHints="postalCode"
        style="@style/EditTextStyle"
        />
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/packed_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/packed_switch_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorSecondary"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_label"
            style="?attr/borderlessButtonStyle"
            android:textColor="?attr/colorPrimary"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button_label"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:backgroundTint="?attr/colorPrimary"/>
    </LinearLayout>

</LinearLayout>